<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imaVi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:maxLength="25"
        app:layout_constraintTop_toBottomOf="@+id/imaVi"
        tools:layout_editor_absoluteX="91dp" />

    <EditText
        android:id="@+id/passw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="10"
        app:layout_constraintTop_toBottomOf="@+id/nombre"
        tools:layout_editor_absoluteX="-36dp" />

    <Button
        android:id="@+id/butRegi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="80dp"
        android:textSize="20sp"
        android:paddingEnd="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/registrese"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passw" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingStart="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="80dp"
        android:background="@color/colorPrimary"
        android:text="@string/ingresar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/butRegi"
        app:layout_constraintTop_toBottomOf="@+id/passw" />


</androidx.constraintlayout.widget.ConstraintLayout>